--- a/folliot.html
+++ b/folliot.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="profile-image-container">
-        <img src="images/photo-profil.jpg" alt="Photo de profil Mathieu Couillard">
+        <img src="images/profil.png" alt="Photo de profil Mathieu Couillard">
     </div>
 
 </div>
